<resources>
    <string name="app_name">SITERPAL</string>
    <string name="menu_title">Selamat Datang,</string>

    <string name="btn_tentang">Tentang</string>
    <string name="btn_keluar">Keluar</string>

    <string name="desc_logokemenhub">Logo Kemenhub</string>

    <string name="profil_title">BPTD XXI GORONTALO</string>

    <string name="about_ver_title">Version</string>
    <string name="about_ver_value">1.0.0</string>
    <string name="about_web_title">Website</string>
    <string name="about_web_value">https://bptdxxigorontalo.com</string>
    <string name="about_ig_title">Instagram</string>
    <string name="about_ig_value">bptd_gorontalo</string>

    <string name="satpel_ppg">PELABUHAN PENYEBERANGAN GORONTALO</string>
    <string name="satpel_ppm">PELABUHAN PENYEBERANGAN MARISA</string>
    <string name="satpel_ttad">TERMINAL TIPE A DUNGINGI</string>
    <string name="satpel_ttai">TERMINAL TIPE A ISIMU</string>
    <string name="satpel_uppkb_marisa">UPPKB MARISA</string>
    <string name="satpel_uppkb_molotabu">UPPKB MOLOTABU</string>

    <string name="kmp_moinit">KMP. MOINIT</string>
    <string name="kmp_tuna_tomini">KMP. TUNA TOMINI</string>
    <string name="btn_pelabuhan">Pelabuhan Penyeberangan</string>
    <string name="btn_terminal">Terminal Penumpang</string>
    <string name="jadwal_kapal">Jadwal Kapal</string>
    <string name="profil">Profil</string>
    <string name="tarif_angkutan">Tarif Angkutan</string>
    <string name="lokasi_pelabuhan">Lokasi Pelabuhan</string>
    <string name="gorontalo">Gorontalo</string>
    <string name="pelabuhan_penyeberangan">Pelabuhan Penyeberangan</string>
    <string name="pelabuhan_penyeberangan_uppercase">PELABUHAN PENYEBERANGAN</string>
    <string name="pelabuhan_penyeberangan_gorontalo">Pelabuhan Penyeberangan Gorontalo</string>
    <string name="pelabuhan_penyeberangan_marisa">Pelabuhan Penyeberangan Marisa</string>
    <string name="marisa">Marisa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="terminal_penumpang">Terminal Penumpang</string>
    <string name="dungingi">Dungingi</string>
    <string name="terminal_tipe_a">Terminal Tipe A</string>
    <string name="isimu">Isimu</string>
</resources>