<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".SatpelActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/satpel_ppGtlo"
            style="@style/satpelCard"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/boat"
                    android:contentDescription="@string/satpel_ppg" />

                <TextView
                    style="@style/satpelCardTitle"
                    android:text="@string/satpel_ppg" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/satpel_ppMarisa"
            style="@style/satpelCard"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/boat"
                    android:contentDescription="@string/satpel_ppm" />

                <TextView
                    style="@style/satpelCardTitle"
                    android:text="@string/satpel_ppm" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/satpel_ttaDungingi"
            style="@style/satpelCard"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/bus"
                    android:contentDescription="@string/satpel_ttad" />

                <TextView
                    style="@style/satpelCardTitle"
                    android:text="@string/satpel_ttad" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/satpel_ttaIsimu"
            style="@style/satpelCard"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/bus"
                    android:contentDescription="@string/satpel_ttai" />

                <TextView
                    style="@style/satpelCardTitle"
                    android:text="@string/satpel_ttai" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/satpel_uppkbMarisa"
            style="@style/satpelCard"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/truck"
                    android:contentDescription="@string/satpel_uppkb_marisa" />

                <TextView
                    style="@style/satpelCardTitle"
                    android:text="@string/satpel_uppkb_marisa" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/satpel_uppkbMolotabu"
            style="@style/satpelCard"
            app:cardBackgroundColor="#3949AB"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/truck"
                    android:contentDescription="@string/satpel_uppkb_molotabu" />

                <TextView
                    style="@style/satpelCardTitle"
                    android:text="@string/satpel_uppkb_molotabu" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>