<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingLeft="15dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/menu_title"
                    android:textColor="@color/white"
                    android:textSize="30dp" />
            </RelativeLayout>

            <GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:padding="2dp"
                android:rowCount="3"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_terminal"
                    style="@style/menuCard"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/desc_logokemenhub"
                            android:src="@drawable/bus" />

                        <TextView
                            style="@style/menuButton"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/btn_terminal"
                            android:textSize="15dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_pelabuhan"
                    style="@style/menuCard"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/desc_logokemenhub"
                            android:src="@drawable/boat" />

                        <TextView
                            style="@style/menuButton"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/btn_pelabuhan"
                            android:textSize="15dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_tentang"
                    style="@style/menuCard"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/desc_logokemenhub"
                            android:src="@drawable/warning" />

                        <TextView
                            style="@style/menuButton"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/btn_tentang"
                            android:textSize="15dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_keluar"
                    style="@style/menuCard"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/desc_logokemenhub"
                            android:src="@drawable/keluar" />

                        <TextView
                            style="@style/menuButton"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/btn_keluar"
                            android:textSize="15dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:background="@color/primaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1.5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="Copyright 2022. BPTD XXI Gorontalo"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>